own_ref_tests/src/tests/failing_tests/bad.stderr
error: 1 positional argument in format string, but no arguments were given
 --> src/tests/failing_tests/bad.rs:2:20
  |
2 |     println!("bad: {}");
  |                    ^^
